Eclipse 4.12 (M3) JDT Patch for Groovy-Eclipse: JDT commit 3d670fe
#839 #838